tests/Fase2-Semantic/error/t06-not_main_method_in_main_class_2.ctds
class main {
	integer x;
	bool main;

	integer add(){
		x = x+1;
		return x;
	}

	void notmain(){
		x=0;
		add();
	}
	
}